--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <p> Hello World! This is my first website. yay!
     <p> Here is another paragrapgh of text.
     <hr>
-    <h2> What im wotking on
+    <h2> What im working on <h2>
     <p> I really like coding
     notice that spacing doesn't really matter
     everything is printed on one line on the page
