--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <body> 
     <h1> My First Website!! </h1>
     <p> Hello World! This is my first website. yay!
-    <p> Here is another paragrapgh of text.
+    <p> I really like codeing and I hope to take an AP computer class next year so I can continue learning about coding
+    <p> I hope to later take more computer classes in collage  
     <hr>
-    <h2> What im working on <h2>
+    <h2> Things that I'm working on coding<h2>
     <p> I really like coding
     notice that spacing doesn't really matter
     everything is printed on one line on the page
