--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <p> I really like codeing and I hope to take an AP computer class next year so I can continue learning about coding
     <p> I hope to later take more computer classes in collage  
     <hr>
-    <h2> Things that I'm working on coding<h2>
+    <h2> Things that I'm working on coding </h2>
     <p> I really like coding
     notice that spacing doesn't really matter
     everything is printed on one line on the page
