--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <title> Sample Website 1!! </title>
   <body> 
-    <h1> My First Website!! </h1>
+    <h1>         My First Website!! </h1>
     <p> Hello World! This is my first website. yay!
-    <p> I really like codeing and I hope to take an AP computer class next year so I can continue learning about coding
-    <p> I hope to later take more computer classes in collage  
+    <p> I really like codeing and I hope to take an AP computer class next year so I can continue learning about coding.
+    <p> I hope to later take more computer classes in collage.  
     <hr>
     <h2> Things that I'm working on coding </h2>
     <p> I really like coding
