--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title> Sample Website 1!! </title>
-  <body> bgColor=orange
+  <body bgColor=orange>
     <h1>         My First Website!! </h1>
     <p> Hello World! This is my first website. yay!
     <p> I really like codeing and I hope to take an AP computer class next year so I can continue learning about coding.
