--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <h1>         My First Website!! </h1>
     <p> Hello World! This is my first website. yay!
     <p> I really like codeing and I hope to take an AP computer class next year so I can continue learning about coding.
-    <p> I hope to later take more computer classes in collage.  
+    <p> I hope to later take more computer classes in collage. 
+     <a href= "cool knight.jpeg">
+      <img src="cool knight.jpeg">
+     </a>
     <hr>
     <h2> Things that I'm working on coding </h2>
     <p> I really like coding
