--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     even though everything in the code is on seperate lines
     <p> If you want a new line, you need to use another paragrapgh of tag
     <p> See.
+     <a href= "d117a20ae163809645b0ba28b3775642.jpg">
+      <img src="d117a20ae163809645b0ba28b3775642.jpg">
+     </a>
     <hr>
     Copyright (C) 2018. All rights reserved
   </body>
