--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <a href= "cool knight.jpeg">
       <img src="cool knight.jpeg">
      </a>
-    <a href=https://www.openprocessing.org/sketch/619817>click Here</a>  
+    <img src="cool knight.jpeg">  
     <hr>
     <h2> Things that I'm working on coding </h2>
     <p> I really like coding
