--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <a href= "cool knight.jpeg">
       <img src="cool knight.jpeg">
      </a>
-    <img src="cool knight.jpeg">  
+    <img src=sketch619817.zip>  
     <hr>
     <h2> Things that I'm working on coding </h2>
     <p> I really like coding
