--- a/schedule.html
+++ b/schedule.html
@@ -2,10 +2,11 @@
  <title> My schedule </title>
  <body>
   <table>
+  <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
-    <td> Period </td>
-    <td> class </td>
-    <td> Room </td>
+    <th> Period </th>
+    <th> class </th>
+    <th> Room </th>
    </tr>
    <tr>
     <td> 1 </td>
