--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
     <th> Period </th>
-    <th> class </th>
+    <th> Class </th>
     <th> Room </th>
    </tr>
    <tr>
