--- a/schedule.html
+++ b/schedule.html
@@ -1,7 +1,7 @@
 <html>
  <title> My schedule </title>
  <body>
-  <table>
+  <table border=1px>
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
     <th> Period </th>
