--- a/schedule.html
+++ b/schedule.html
@@ -9,37 +9,37 @@
     <th> Room </th>
    </tr>
    <tr>
-    <td> 1 </td>
+    <td align="center"> 1 </td>
     <td> history </td>
     <td> ? </td>
    </tr>
    <tr>
-   <td> 2 </td>
+   <td align="center"> 2 </td>
    <td> Computer Sience Principles </td>
-   <td> ? </td>
+   <td align="center"> ? </td>
    </tr>
     <tr>
-    <td> advisory </td>
+    <td align="center"> advisory </td>
     <td> advisory </td>
     <td> ? </td>
    </tr>
     <tr>
-    <td> 3 </td>
+    <td align="center"> 3 </td>
     <td> biology </td>
     <td> ? </td>
    </tr>
     <tr>
-    <td> 4 </td>
+    <td align="center"> 4 </td>
     <td> spanish </td>
     <td> ? </td>
    </tr>
     <tr>
-    <td> 5 </td>
+    <td align="center"> 5 </td>
     <td> english </td>
     <td> ? </td>
    </tr>
     <tr>
-    <td> 6 </td>
+    <td align="center"> 6 </td>
     <td> algebra 2 </td>
     <td> ? </td>
    </tr>
