--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,7 @@
    <tr>
    <td align="center"> 2 </td>
    <td> Computer Sience Principles </td>
-   <td align="center"> ? </td>
+   <td> SE 224 <tr> Mr.Chan </tr></td>
    </tr>
     <tr>
     <td align="center"> advisory </td>
