--- a/schedule.html
+++ b/schedule.html
@@ -14,9 +14,15 @@
     <td> ? </td>
    </tr>
    <tr>
+    <td> Ms. Esxo </td>
+   </tr>
+   <tr>
    <td align="center"> 2 </td>
    <td> Computer Sience Principles </td>
-   <td> SE 224 <tr> Mr.Chan </tr></td>
+   <td> SE 224 </td>
+   </tr>
+   <tr>
+    <td> Mr.Chan </td>
    </tr>
     <tr>
     <td align="center"> advisory </td>
