--- a/schedule.html
+++ b/schedule.html
@@ -9,8 +9,8 @@
     <th> Room </th>
    </tr>
    <tr>
-    <td align="center"> 1 </td>
-    <td> history </td>
+    <td align="center" rowspan=2> 1 </td>
+    <td rowspan=2> history </td>
     <td> ? </td>
    </tr>
    <tr>
