--- a/schedule.html
+++ b/schedule.html
@@ -17,8 +17,8 @@
     <td> Ms. Esxo </td>
    </tr>
    <tr>
-   <td align="center"> 2 </td>
-   <td> Computer Sience Principles </td>
+   <td align="center" rowspan=2> 2 </td>
+   <td rowspan=2> Computer Sience Principles </td>
    <td> SE 224 </td>
    </tr>
    <tr>
@@ -26,27 +26,27 @@
    </tr>
     <tr>
     <td align="center"> advisory </td>
-    <td> advisory </td>
+    <td rowspan=2> advisory </td>
     <td> ? </td>
    </tr>
     <tr>
     <td align="center"> 3 </td>
-    <td> biology </td>
+    <td rowspan=2> biology </td>
     <td> ? </td>
    </tr>
     <tr>
     <td align="center"> 4 </td>
-    <td> spanish </td>
+    <td rowspan=2> spanish </td>
     <td> ? </td>
    </tr>
     <tr>
     <td align="center"> 5 </td>
-    <td> english </td>
+    <td rowspan=2> english </td>
     <td> ? </td>
    </tr>
     <tr>
     <td align="center"> 6 </td>
-    <td> algebra 2 </td>
+    <td rowspan=2> algebra 2 </td>
     <td> ? </td>
    </tr>
    
