--- a/schedule.html
+++ b/schedule.html
@@ -29,27 +29,41 @@
     <td rowspan=2> advisory </td>
     <td> ? </td>
    </tr>
+   <tr>
+    <td> Mr.Taylor </td>
+   </tr>
     <tr>
     <td align="center"> 3 </td>
     <td rowspan=2> biology </td>
     <td> ? </td>
+   </tr>
+   <tr>
+    <td> Ms.Russel </td>
    </tr>
     <tr>
     <td align="center"> 4 </td>
     <td rowspan=2> spanish </td>
     <td> ? </td>
    </tr>
+   <tr>
+    <td> Ms.Johnston </td>
+   </tr>
     <tr>
     <td align="center"> 5 </td>
     <td rowspan=2> english </td>
     <td> ? </td>
+   </tr>
+   <tr>
+    <td> Mr.Moliter </td>
    </tr>
     <tr>
     <td align="center"> 6 </td>
     <td rowspan=2> algebra 2 </td>
     <td> ? </td>
    </tr>
-   
+   <tr>
+    <td> Mr.Witney </td>
+   </tr>
     </tr>
    </tr>
   </table>
