--- a/schedule.html
+++ b/schedule.html
@@ -25,7 +25,7 @@
     <td> Mr.Chan </td>
    </tr>
     <tr>
-    <td align="center"> advisory </td>
+    <td align="center" rowspan=2> advisory </td>
     <td rowspan=2> advisory </td>
     <td> ? </td>
    </tr>
@@ -33,7 +33,7 @@
     <td> Mr.Taylor </td>
    </tr>
     <tr>
-    <td align="center"> 3 </td>
+    <td align="center" rowspan=2> 3 </td>
     <td rowspan=2> biology </td>
     <td> ? </td>
    </tr>
@@ -41,7 +41,7 @@
     <td> Ms.Russel </td>
    </tr>
     <tr>
-    <td align="center"> 4 </td>
+    <td align="center" rowspan=2> 4 </td>
     <td rowspan=2> spanish </td>
     <td> ? </td>
    </tr>
@@ -49,7 +49,7 @@
     <td> Ms.Johnston </td>
    </tr>
     <tr>
-    <td align="center"> 5 </td>
+    <td align="center" rowspan=2> 5 </td>
     <td rowspan=2> english </td>
     <td> ? </td>
    </tr>
@@ -57,7 +57,7 @@
     <td> Mr.Moliter </td>
    </tr>
     <tr>
-    <td align="center"> 6 </td>
+    <td align="center" rowspan=2> 6 </td>
     <td rowspan=2> algebra 2 </td>
     <td> ? </td>
    </tr>
