--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,7 @@
    <tr>
     <td> Ms. Esxo </td>
    </tr>
-   <tr bg color= "orange" >
+   <tr bgcolor= orange >
    <td align="center" rowspan=2> 2 </td>
    <td rowspan=2> Computer Sience Principles </td>
    <td> SE 224 </td>
