--- a/schedule.html
+++ b/schedule.html
@@ -8,12 +8,12 @@
     <th> Class </th>
     <th> Room </th>
    </tr>
-   <tr>
+   <tr bgcolor= blue>
     <td align="center" rowspan=2> 1 </td>
     <td rowspan=2> history </td>
     <td> ? </td>
    </tr>
-   <tr>
+   <tr bgcolor= blue>
     <td> Ms. Esxo </td>
    </tr>
    <tr bgcolor= orange >
@@ -21,7 +21,7 @@
    <td rowspan=2> Computer Sience Principles </td>
    <td> SE 224 </td>
    </tr>
-   <tr>
+   <tr bgcolor= orange>
     <td> Mr.Chan </td>
    </tr>
     <tr>
