--- a/schedule.html
+++ b/schedule.html
@@ -4,9 +4,9 @@
   <table border=1px>
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
-    <th> Period </th>
-    <th> Class </th>
-    <th> Room </th>
+    <th bgcolor= yellow> Period </th>
+    <th bgcolor= blue> Class </th>
+    <th bgcolor= orange> Room </th>
    </tr>
    <tr bgcolor= blue>
     <td align="center" rowspan=2> 1 </td>
@@ -48,12 +48,12 @@
    <tr>
     <td> Ms.Johnston </td>
    </tr>
-    <tr>
+    <tr bgcolor= yellow>
     <td align="center" rowspan=2> 5 </td>
     <td rowspan=2> english </td>
     <td> ? </td>
    </tr>
-   <tr>
+   <tr bgcolor= yellow>
     <td> Mr.Moliter </td>
    </tr>
     <tr>
