--- a/schedule.html
+++ b/schedule.html
@@ -24,12 +24,12 @@
    <tr bgcolor= orange>
     <td> Mr.Chan </td>
    </tr>
-    <tr>
+    <tr bgcolor= green>
     <td align="center" rowspan=2> advisory </td>
     <td rowspan=2> advisory </td>
     <td> ? </td>
    </tr>
-   <tr>
+   <tr bgcolor= green>
     <td> Mr.Taylor </td>
    </tr>
     <tr>
