--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,6 @@
 <html>
  <title> My schedule </title>
- <body>
+ <body bgcolor= orange>
   <table border=1px>
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
