--- a/schedule.html
+++ b/schedule.html
@@ -56,12 +56,12 @@
    <tr bgcolor= yellow>
     <td> Mr.Moliter </td>
    </tr>
-    <tr>
+    <tr bgcolor= red>
     <td align="center" rowspan=2> 6 </td>
     <td rowspan=2> algebra 2 </td>
     <td> ? </td>
    </tr>
-   <tr>
+   <tr bgcolor= red>
     <td> Mr.Witney </td>
    </tr>
     </tr>
