--- a/schedule.html
+++ b/schedule.html
@@ -1,13 +1,17 @@
 <html>
  <title> My schedule </title>
  <body bgcolor= orange>
-  <table border=1px>
+  <table border= 2px>
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
     <th bgcolor= yellow> Period </th>
     <th bgcolor= blue> Class </th>
     <th bgcolor= orange> Room </th>
    </tr>
+   <tr>
+    <th bgcolor= yellow> Time </th>
+    <th bgcolor= orange> Teacher </th>
+    </tr>
    <tr bgcolor= blue>
     <td align="center" rowspan=2> 1 </td>
     <td rowspan=2> history </td>
