--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
     <th bgcolor= yellow> Period </th>
-    <th bgcolor= blue> Class </th>
+    <th bgcolor= "blue" rowspan= 2 > Class </th>
     <th bgcolor= orange> Room </th>
    </tr>
    <tr>
