--- a/schedule.html
+++ b/schedule.html
@@ -44,12 +44,12 @@
    <tr>
     <td> Ms.Russel </td>
    </tr>
-    <tr>
+    <tr bgcolor= lime>
     <td align="center" rowspan=2> 4 </td>
     <td rowspan=2> spanish </td>
     <td> ? </td>
    </tr>
-   <tr>
+   <tr bgcolor= lime>
     <td> Ms.Johnston </td>
    </tr>
     <tr bgcolor= yellow>
