--- a/schedule.html
+++ b/schedule.html
@@ -36,12 +36,12 @@
    <tr bgcolor= green>
     <td> Mr.Taylor </td>
    </tr>
-    <tr bgcolor= purple>
+    <tr bgcolor= cyan>
     <td align="center" rowspan=2> 3 </td>
     <td rowspan=2> biology </td>
     <td> ? </td>
    </tr>
-   <tr bgcolor= purple>
+   <tr bgcolor= cyan>
     <td> Ms.Russel </td>
    </tr>
     <tr bgcolor= lime>
