--- a/schedule.html
+++ b/schedule.html
@@ -56,7 +56,10 @@
    </tr>
    <tr bgcolor= lime>
     <td> Ms.Johnston </td>
-   </tr>
+    </tr>
+    <tr>
+     <td> Second Lunch </td>
+    </tr>
     <tr bgcolor= yellow>
     <td align="center" rowspan=2> 5 </td>
     <td rowspan=2> english </td>
