--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,7 @@
   <table border= 2px>
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
-    <th bgcolor= yellow> Period </th>
+    <th bgcolor= yellow colspan=2> Period </th>
     <th bgcolor= "blue" rowspan= 2 > Class </th>
     <th bgcolor= orange> Room </th>
    </tr>
@@ -14,7 +14,7 @@
     </tr>
    <tr bgcolor= blue>
     <td align="center" rowspan=2> 1 </td>
-    <td colspan=2> 7:20-8:10 </td>
+    <td> 7:20-8:10 </td>
     <td rowspan=2> history </td>
     <td> ? </td>
    </tr>
@@ -23,7 +23,7 @@
    </tr>
    <tr bgcolor= orange >
    <td align="center" rowspan=2> 2 </td>
-   <td colspan=2> 8:15-9:05 </td>
+   <td> 8:15-9:05 </td>
    <td rowspan=2> Computer Sience Principles </td>
    <td> SE 224 </td>
    </tr>
@@ -32,7 +32,7 @@
    </tr>
     <tr bgcolor= green>
     <td align="center" rowspan=2> advisory </td>
-    <td colspan=2> 9:10-9:35 </td>
+    <td> 9:10-9:35 </td>
     <td rowspan=2> advisory </td>
     <td> ? </td>
    </tr>
@@ -41,7 +41,7 @@
    </tr>
     <tr bgcolor= cyan>
     <td align="center" rowspan=2> 3 </td>
-     <td colspan=2> 9:40-10:30 </td>
+     <td> 9:40-10:30 </td>
     <td rowspan=2> biology </td>
     <td> ? </td>
    </tr>
@@ -50,7 +50,7 @@
    </tr>
     <tr bgcolor= lime>
     <td align="center" rowspan=2> 4 </td>
-     <td colspan=2> 10:30-11:25 </td>
+     <td> 10:30-11:25 </td>
     <td rowspan=2> spanish </td>
     <td> ? </td>
    </tr>
