--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
    <tr>   
     <th bgcolor= yellow colspan=2> Period </th>
     <th bgcolor= "blue" rowspan= 2 > Class </th>
-    <th bgcolor= orange> Room </th>
+    <th bgcolor= orange> Room# </th>
    </tr>
    <tr>
     <th bgcolor= yellow> Time </th>
