--- a/schedule.html
+++ b/schedule.html
@@ -5,11 +5,11 @@
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
     <th bgcolor= yellow colspan=2> Period </th>
+    <td bgcolor= yellow> Time </td>
     <th bgcolor= "blue" rowspan= 2 > Class </th>
     <th bgcolor= orange> Room# </th>
    </tr>
-   <tr>
-    <th bgcolor= yellow> Time </th>
+   <tr> 
     <th bgcolor= orange> Teacher </th>
     </tr>
    <tr bgcolor= blue>
