--- a/schedule.html
+++ b/schedule.html
@@ -58,7 +58,7 @@
     <td> Ms.Johnston </td>
     </tr>
     <tr>
-     <td> Second Lunch </td>
+     <td colspan=4 align="center"><i> Second Lunch </i></td>
     </tr>
     <tr bgcolor= yellow>
     <td align="center" rowspan=2> 5 </td>
