--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,7 @@
   <table border= 2px>
   <caption> My fall 2018-2019 class Schedule </caption>
    <tr>   
-    <th bgcolor= yellow colspan=2> Period </th>
+    <th bgcolor= yellow> Period </th>
     <td bgcolor= yellow> Time </td>
     <th bgcolor= "blue" rowspan= 2 > Class </th>
     <th bgcolor= orange> Room# </th>
