--- a/schedule.html
+++ b/schedule.html
@@ -62,6 +62,7 @@
     </tr>
     <tr bgcolor= yellow>
     <td align="center" rowspan=2> 5 </td>
+    <td rowspan=2> 12:05-12:55 </td>
     <td rowspan=2> english </td>
     <td> ? </td>
    </tr>
@@ -70,6 +71,7 @@
    </tr>
     <tr bgcolor= red>
     <td align="center" rowspan=2> 6 </td>
+     <td rowspan=2> 1:00-1:50
     <td rowspan=2> algebra 2 </td>
     <td> ? </td>
    </tr>
