--- a/schedule.html
+++ b/schedule.html
@@ -30,13 +30,13 @@
    <tr bgcolor= orange>
     <td> Mr.Chan </td>
    </tr>
-    <tr bgcolor= navy>
+    <tr bgcolor= "baby blue">
     <td align="center" rowspan=2> advisory </td>
     <td rowspan=2> 9:10-9:35 </td>
     <td rowspan=2> advisory </td>
     <td> ? </td>
    </tr>
-   <tr bgcolor= navy>
+   <tr bgcolor= "baby blue">
     <td> Mr.Taylor </td>
    </tr>
     <tr bgcolor= cyan>
